--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   .sliderSection {
     width: 100%;
-    .slider { 
+    .slider {
       width: 100%;
       .slide {
         width: 100%;
@@ -15,7 +15,35 @@
       }
     }
   }
-  .bestSellingSection{
+  .productsSection {
     width: 80%;
+  }
+  .brandsSection {
+    width: 80%;
+    h1{
+      color: var(--bg4);
+      margin-bottom: 20px;
+    }
+    .brands {
+      .brand {
+        a {
+          width: 150px;
+          width: 150px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          img {
+            width: 110px;
+            height: 110px;
+            object-fit: contain;
+            border-radius: 100%;
+          }
+          p{
+            font-weight: 600;
+          }
+        }
+      }
+    }
   }
 }
