--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,22 +1,111 @@
 .Header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    padding: 33px 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .center {
     background-color: var(--bg3);
-    .logoContainer{
-        width: 200px;
-        svg{
-            width: 100%;
-        }
+    padding: 33px 100px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+    border-bottom: 5px solid var(--bg5);
+    .logoContainer {
+      width: 200px;
+      svg {
+        width: 100%;
+      }
     }
-    .menu{
+  }
+  .menu {
+    display: flex;
+    gap: 25px;
+    position: relative;
+    .firstLevel {
+      margin-top: 2px;
+      border-bottom: 2px solid var(--bg1);
+      &:hover {
+        border-bottom: 2px solid var(--bg5);
+        .subMenu {
+          visibility: visible;
+          opacity: 1;
+        }
+      }
+      .firstLevelLink {
+        color: var(--tx1);
+        border-radius: 5px;
+        font-size: 18px;
+        height: 56px;
+        width: 120px;
         display: flex;
-        gap: 25px;
-        a{
-            color: var(--tx2);
-            font-size: 18px;
-        }
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 13px;
+        font-weight: 700;
+        color: var(--bg3);
+      }
     }
+    .subMenu {
+      visibility: hidden;
+      opacity: 0;
+      position: absolute;
+      padding: 20px;
+      border: 1px solid #e6e6e6;
+      border-radius: 2px;
+      box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+      box-sizing: content-box !important;
+      left: 0;
+      top: 57px;
+      width: 100%;
+      z-index: 5;
+      background-color: var(--bg1);
+      transition: all 0.5s;
+      display: flex;
+      justify-content: space-between;
+
+      .start {
+        width: 65%;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
+        gap: 50px 25px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          ".column .column .column"
+          ".column .column .column"
+          ".column .column .column";
+        .column {
+          a {
+            text-align: start !important;
+            color: var(--tx1);
+            font-size: 12px;
+          }
+          .secondLevel {
+            font-size: 14px;
+            font-weight: 600;
+          }
+          .thirdLevel {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+          }
+        }
+      }
+
+      .end {
+        width: 37%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        img {
+          width: 215px;
+          height: 160px;
+          object-fit: cover;
+          border-radius: 5px;
+        }
+      }
+    }
+  }
 }
