--- a/src/components/ProductsSliderCard/ProductsSliderCard.module.scss
+++ b/src/components/ProductsSliderCard/ProductsSliderCard.module.scss
@@ -1,69 +1,80 @@
 .ProductsSliderCard {
-  width: 240px;
+  width: 216px;
   display: flex;
   flex-direction: column;
   background-color: var(--bg6);
   overflow: hidden;
+  border: var(--bo1);
+  border-radius: 18px;
+  position: relative;
   .imageContainer {
+    padding: 20px;
+    border-bottom: var(--bo1);
     position: relative;
-    .tag {
-      position: absolute;
-      padding: 26px;
-      z-index: 1;
-      display: flex;
-      justify-content: space-between;
-      span {
-        padding: 6px 10px;
-        font-size: 14px;
-        font-weight: 600;
-        height: fit-content;
-        text-transform: uppercase;
-        background-color: var(--bg5);
-
-      }
-      button {
-        cursor: pointer;
-      }
-    }
-
     img {
-      width: 240px;
-      height: 240px;
+      width: 175px;
+      height: 180px;
       object-fit: cover;
       cursor: pointer;
     }
+    .wishlistBtn{
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      outline: none;
+      border: none;
+      padding: 10px;
+      border-radius: 100%;
+      background-color: var(--bg1);
+      box-shadow: var(--shadow);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      svg{
+      width: 18px;
+      height: 18px;
+      }
+    }
   }
   .details {
-    margin-block: 18px 28px;
     width: 100%;
     padding: 10px;
-    .title {
-      font-size: 18px;
-      text-transform: capitalize;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      width: 100%;
-    }
     .descAndPrice {
       display: flex;
       flex-direction: column;
-
-      margin-top: 5px;
-      * {
-        display: flex;
-        align-items: center;
-      }
-      .desc{
+      gap: 10px;
+      .desc {
         font-size: 14px;
-        text-transform: capitalize;
-        white-space: nowrap;
-        text-overflow: ellipsis;
+        overflow: hidden;
+        height: 38px;
         width: 100%;
+
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
       .price {
-        font-size: 22px;
+        font-size: 20px;
         font-weight: 500;
       }
+    }
+  }
+  .tag {
+    position: absolute;
+    z-index: 1;
+    bottom: 10px;
+    right: 10px;
+    span {
+      font-weight: 600;
+      height: fit-content;
+      text-transform: uppercase;
+      background-color: var(--bg5);
+      font-size: 12px;
+      border-radius: 25px;
+      padding: 2px 7px;
     }
   }
 }
