--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   .sliderSection {
     width: 100%;
@@ -16,15 +16,24 @@
     }
   }
   .productsSection {
-    width: 80%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .brandsSection {
-    width: 80%;
+    width: 100%;
+    padding-inline: 240px;
+    background-color: var(--bg3);
+    padding-block: 50px;
     h1{
       color: var(--bg4);
       margin-bottom: 20px;
+      color: var(--bg1);
+      margin-bottom: 20px;
     }
     .brands {
+      
       .brand {
         a {
           width: 150px;
@@ -38,9 +47,11 @@
             height: 110px;
             object-fit: contain;
             border-radius: 100%;
+            background-color: var(--bg1);
           }
           p{
             font-weight: 600;
+            color: var(--bg1);
           }
         }
       }
