--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -7,6 +7,9 @@
   --bg6: #00000004;
   --tx1: #000;
   --tx2: #fff;
+  --bo1: 2px solid #f2f2f2;
+  --bo2: 1px solid #007aff;
+  --shadow: 0px 3px 6px #00000029;
 }
 
 * {
@@ -50,4 +53,28 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  top: -40px !important;
+  right: 60px !important;
+  left: unset !important;
+  background-color: var(--bg1);
+  height: 40px !important;
+  width: 40px !important;
+  border: var(--bo2) !important;
+  border-radius: 100% !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &::after {
+    font-size: 20px !important;
+    font-weight: 600 !important;
+  }
+}
+
+.swiper-button-next {
+  right: 10px !important;
 }
